--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,14 @@ header nav ul li a:hover
 
 #profile
 {
-    margin: auto;
+    margin: 50px auto 0px auto;
     display: block;
     object-fit: cover;
     width: 300px;
     height: 300px
+}
+
+.centered
+{
+    text-align: center;
 }
