--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
 {
     margin: 0;
     padding: 0;
+    font-family: 'Aldrich';
 }
 
 header
 {
     background-color: darkgrey;
-    height: 112px;
-    line-height: 112px;
+    height: 80px;
+    line-height: 80px;
 }
 
 ul
@@ -54,6 +55,7 @@ header nav ul li a:hover
 .main-header
 {
     margin-bottom: 75px;
+    font-weight: bold;
 }
 
 .project-card
@@ -100,7 +102,48 @@ header nav ul li a:hover
     box-shadow: 0px 0px 0px 10px skyblue;
 }
 
-.date 
-{
+.timeline {
+    list-style-type: none;
+    position: relative;
     text-align: left;
 }
+.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+.timeline li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+.timeline li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #22c0e8;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+
+.timeline-image
+{
+    position: absolute;
+    left: 60px;
+    top: -10px;
+}
+
+.image
+{
+    width: 150px;
+    height: 150px;
+}
+
