--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,22 @@
     margin: 0;
     padding: 0;
     font-family: 'Aldrich';
-    
-    background-image: url(../images/background.jpg);
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     color: white;
+}
+
+p
+{
+    font-size: 12px;
 }
 
 header
 {
-    background-color: darkgrey;
-    height: 80px;
-    line-height: 80px;
+    line-height: 60px;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    height: 60px;
+
 }
 
 header nav
@@ -48,17 +47,96 @@ header nav ul li a
 header nav ul li a:hover
 {
     text-decoration: none;
-    color: red;
+    color: #86c232;
 }
 
+.scroll-background
+{
+    background-color: #6b6e70;
+    transition: all 0.3s;
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
+}
+
+#intro
+{
+    overflow: hidden;
+    width: 100%;
+}
+
+.landing
+{
+    height: 800px;
+}
+
+.landing h1
+{
+    margin-top: 200px;
+    color: white;
+}
 
 #profile
 {
+    position: relative;
     margin: 50px auto 0px auto;
     display: block;
     object-fit: cover;
+    width: 150px;
+    height: 150px;
+    z-index: 2;
+    top: 80px;
+}
+
+.about
+{
+    height: 300px;
+}
+
+.about-content
+{
+    position: relative;
+    left: 50%;
+    top: -150px;
+    width: 500px;
+    transform: skew(20deg);
+    background-color: #6b6e70;
+    padding: 80px 70px 80px 100px;
+    z-index: 1;
+}
+
+.about-content p
+{
+    transform: skew(-20deg);
+}
+
+.social-media
+{
+    margin: auto;
+    position: relative;
+    background-color: #86c232;
+    width: 400px;
+    font-size: 5rem;
+    right: 150px;
+    top: -445px;
+    z-index: 0;
+    transform: skew(20deg);
+}
+
+.social-media .nav-list 
+{
+    position: relative;
+    left: 10px;
     width: 300px;
-    height: 300px
+    transform: skew(-20deg);
+}
+
+.social-media li
+{
+    padding: 20px 10px 0px 10px;
+}
+
+.social-media .fab, .fas
+{
+    color: black;
 }
 
 .intro-area
@@ -66,34 +144,106 @@ header nav ul li a:hover
     padding: 100px;
     text-align: center;
     position: relative;
+    background-color: #222629;
 }
 
-.main-header
+.main-header h1
 {
     margin-bottom: 75px;
-    font-weight: bold;
+    font-size: 7rem;
+    z-index: 0;
+    opacity: 0.1;
+}
+
+.timeline {
+    list-style-type: none;
+    position: relative;
+}
+
+.timeline:before{
+    content: '';
+    background-color: #e7e7e7;
+    height: 100%;
+    width: 15px;
+    border-radius: 10px;
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%;
+}
+.timeline:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.timeline li{
+    width: 50%;
+    padding: 0 0px 100px 25px;
+    margin: 0 0 30px 20px;
+    float: right;
+    position: relative;
+    text-align: left;
+    left: 10px;
+}
+
+
+.timeline li:after{
+    content: '';
+    background-color: #61892f;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff, 0 0 10px #333;
+    transform: translateY(-50%);
+    position: absolute;
+    left: -17px;
+    top: 30%;
+}
+
+.timeline li:nth-child(even){
+    padding: 0 25px 100px 0;
+    margin: 0 10px 30px 0;
+    float: left;
+    text-align: right;
+    left: -10px;
+}
+.timeline li:nth-child(even):after{
+    left: auto;
+    right:-18px;
+}
+
+
+.timeline-image
+{
+    position: absolute;
+    left: -180px;
+    top: -40px;
+}
+
+.image
+{
+    width: 150px;
+    height: 150px;
 }
 
 .project-card
 {
     position: relative;
-    background: lightgrey;
+    background: grey;
     margin: 50px 20px 0px;
-    text-align: center;
+    text-align: left;
     padding: 70px 25px 40px;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .project-card:hover, .project-card.active
 {
-    background:lightblue;
+    background: #86c232;
     transform: scale(1.05);
 }
 
 .project-card:hover > .project-icon
 {
-    background:lightblue;
+    background-color: #86c232;
     transform: scale(1.05);
 }
 
@@ -124,85 +274,15 @@ header nav ul li a:hover
     border-radius: 50%;
 }
 
-#icon
+.project-card #icon
 {
     width: 63px;
     height: 63px;
     font-size: 30px;
     line-height: 2;
     color: black;
-    background: deepskyblue;
+    background: #86c232;
     border-radius: 50%;
-    box-shadow: 0px 0px 0px 10px skyblue;
+    box-shadow: 0px 0px 0px 10px #61892f;
+    text-align: center;
 }
-
-.timeline {
-    list-style-type: none;
-    position: relative;
-}
-
-.timeline:before{
-    content: '';
-    background-color: #e7e7e7;
-    height: 100%;
-    width: 15px;
-    border-radius: 10px;
-    transform: translateX(-50%);
-    position: absolute;
-    left: 50%;
-}
-.timeline:after{
-    content: '';
-    display: block;
-    clear: both;
-}
-.timeline li{
-    width: 50%;
-    padding: 0 0 30px 25px;
-    margin: 0 0 30px 20px;
-    float: right;
-    position: relative;
-    text-align: left;
-    left: 10px;
-}
-
-
-.timeline li:after{
-    content: '';
-    background-color: #734D8E;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 3px #fff, 0 0 10px #333;
-    transform: translateY(-50%);
-    position: absolute;
-    left: -17px;
-    top: 40%;
-}
-
-.timeline li:nth-child(even){
-    padding: 0 25px 0 0;
-    margin: 0 10px 30px 0;
-    float: left;
-    text-align: right;
-    left: -10px;
-}
-.timeline li:nth-child(even):after{
-    left: auto;
-    right:-18px;
-}
-
-
-.timeline-image
-{
-    position: absolute;
-    left: -180px;
-    top: -40px;
-}
-
-.image
-{
-    width: 150px;
-    height: 150px;
-}
-
